# fernando-platform

./: BILLING_IMPLEMENTATION_SUMMARY.md  BILLING_INTEGRATION_COMPLETE.md  BILLING_SYSTEM_GUIDE.md  BILLING_TESTING_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  COMPREHENSIVE_ENHANCEMENTS_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_INFRASTRUCTURE.md  DEVELOPMENT_SETUP_SUMMARY.md  DOCUMENTATION_REBRANDING_COMPLETE.md  EMAIL_TEMPLATES_UPDATE_SUMMARY.md  ENTERPRISE_BILLING_IMPLEMENTATION.md  ENTERPRISE_BILLING_QUICK_START.md  ENTERPRISE_BILLING_SUMMARY.md  ENTERPRISE_FEATURES.md  ENTERPRISE_IMPLEMENTATION_COMPLETE.md  ENTERPRISE_ROADMAP.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  GITHUB_PUBLISHING.md  GITHUB_PUBLISHING_COMPLETION_SUMMARY.md  HUMAN_VERIFICATION_WORKFLOW.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LICENSING_SYSTEM_GUIDE.md  MANUAL_TESTING_GUIDE.md  MIGRATION.md  PAYMENT_FRONTEND_SETUP.md  PAYMENT_IMPLEMENTATION_SUMMARY.md  PAYMENT_INTEGRATION_COMPLETE.md  PAYMENT_QUICK_START.md  PAYMENT_TESTING_PROGRESS.md  PROJECT_DIRECTORY_RENAME_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START_BILLING.md  (+27 more)
backend/: .env.example  .flake8  ALERTING_IMPLEMENTATION_SUMMARY.md  ALERTING_SYSTEM_GUIDE.md  ENTERPRISE_BILLING_DEPLOYMENT_SUMMARY.md  ML_IMPLEMENTATION_SUMMARY.md  PROXY_INTEGRATION_COMPLETE.md  README.md  REDIS_CACHING_IMPLEMENTATION.md  REDIS_IMPLEMENTATION_COMPLETE.md  REFACTORING_SUMMARY.md  REVENUE_OPERATIONS_DEPLOYMENT_SUMMARY.md  REVENUE_OPERATIONS_TEST_REPORT.md  TELEMETRY_IMPLEMENTATION_SUMMARY.md  TELEMETRY_INTEGRATION_SUMMARY.md  TELEMETRY_SYSTEM_GUIDE.md  check_imports.py  deploy_all_proxies.py  initialize_alert_system.py  initialize_enterprise_billing.py  initialize_usage_quotas.py  initialize_user_management.py  install_and_run.sh  migrate_enterprise.py  migrate_proxy_integration.py  monitor_proxy_services.py  proxy_migration_report.md  pyproject.toml  pytest.ini  quick_proxy_reference.sh  quick_start.sh  requirements-dev.txt  requirements.txt  run_enterprise_setup.sh  run_server.sh  run_tests_only.sh  seed_subscription_plans.py  setup_billing.sh  setup_cache_system.py  setup_proxy_integration.py  (+9 more)
backend/app/: main.py
backend/app/api/: admin.py  alerting.py  audit_logging.py  auth.py  billing.py  deps.py  enhanced_documents.py  enterprise.py  enterprise_billing.py  export_import.py  extractions.py  jobs.py  licenses.py  payments.py  queue.py  revenue_operations.py  system.py  toconline.py  usage.py  verification.py
backend/app/api/endpoints/: credits.py  notifications.py  user_management.py
backend/app/core/: app_config.py  cache_config.py  config.py  exception_handlers.py  middleware_config.py  monitoring_analytics.py  rbac.py  router_config.py  security.py  server_architecture.py  server_config.py  startup.py  telemetry.py  tenant_management.py
backend/app/db/: session.py
backend/app/middleware/: cache_decorators.py  credit_validation.py  rate_limiting.py  telemetry_decorators.py  telemetry_middleware.py  usage_tracking.py
backend/app/migrations/: cache_migration.py
backend/app/ml/: revenue_ml_models.py
backend/app/models/: alert.py  audit.py  billing.py  cache.py  credit.py  credits.py  document.py  document_extensions.py  enterprise.py  enterprise_billing.py  extraction.py  job.py  license.py  logging.py  notifications.py  proxy.py  revenue_operations.py  server_architecture.py  telemetry.py  usage.py  user.py  user_management.py  verification.py
backend/app/schemas/: alert_schemas.py  audit_logging_schemas.py  billing_schemas.py  credit_schemas.py  license_schemas.py  schemas.py  user_management_schemas.py
backend/app/services/: billing_service.py  credit_service.py  cryptocurrency_service.py  document_converter.py  document_processor.py  document_validator.py  dunning_management_service.py  email_service.py  enhanced_document_processor.py  enterprise_billing_service.py  enterprise_service.py  export_import_service.py  financial_compliance_service.py  financial_connectors.py  fraud_detection_service.py  licensing_service.py  llm_service.py  mock_llm.py  mock_ocr.py  mock_toconline.py  ocr_service.py  payment_gateway.py  paypal_service.py  queue_manager.py  revenue_analytics_service.py  server_communication.py  stripe_service.py  usage_analytics_service.py  usage_reporting_service.py  usage_tracking_service.py  user_management.py
backend/app/services/alerting/: alert_channels.py  alert_escalation.py  alert_manager.py  alert_rules.py  background_jobs.py
backend/app/services/api_management/: api_key_manager.py  key_analytics.py  key_rotation.py  key_security.py
backend/app/services/audit/: __init__.py  audit_analytics.py  audit_compliance.py  audit_events.py  audit_service.py
backend/app/services/compliance/: __init__.py  (+4 more)
backend/migrations/: 001_create_credit_system_tables.py  001_user_management_system.py
backend/migrations/versions/: 004_add_licensing.py  005_add_billing.py  006_add_usage_tracking.py  007_add_enterprise_billing.py  008_add_revenue_operations.py  009_add_alerting_system.py  009_add_telemetry_system.py
backend/tests/: conftest.py  test_main.py  test_proxy_integration.py
(+258 files in other folders)
